<resources>

    <!-- Activity Main -->

    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>

    <!-- Activity Settings -->

    <string name="switch_themes">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms">Пользовательское соглашение</string>

    <!-- SettingsActivity.kt -->

    <string name="course_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">slogoff@yandex.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="terms_url">https://yandex.ru/legal/practicum_offer/</string>

    <!-- Activity Search -->

    <string name="input_hint">Поиск</string>
    <string name="no_tracks">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="history_title">Вы искали</string>
    <string name="history_clear">Очистить историю</string>

    <!-- Activity MediaPlayer -->

    <string name="default_value">00:00</string>
    <string name="duration">Длительность</string>
    <string name="album">Название альбома</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="unknown">Неизвестно</string>
    <string name="add_paylist">Добавить в плейлист</string>
    <string name="track_not_found">"Трек не найден"</string>

    <!-- Activity Library -->

    <string name="liked_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="no_liked_tracks">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали\n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_create">Создать</string>
    
    <!-- Create playlist -->

    <string name="playlist_created"> "Плейлист %s создан",</string>
    <string name="playlist_dir">PlaylistAlbum</string>
    <string name="dialog_create_title">Завершить создание плейлиста?</string>
    <string name="dialog_edit_title">Завершить редактирование плейлиста?</string>
    <string name="dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_confirm">Завершить</string>
    <string name="add_track_exist">Трек уже добавлен в плейлист</string>
    <string name="add_track_success">Добавлено в плейлист</string>
    <string name="add_track_error">При добавлении трека что-то пошло не так.</string>

    <!-- Playlist Info-->   
    
    <string name="playlist_not_found">"Плейлист не найден"</string>
    <string name="playlist_empty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_track_message">Хотите удалить трек?</string>
    <string name="delete_playlist_message">Хотите удалить плейлист "%s"?</string>
    <string name="delete_cancel">Нет</string>
    <string name="delete_confirm">Да</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="empty_placeholder">В этот плейлист еще не добавлены треки</string>

    <!-- Playlist Edit-->

    <string name="playlist_edit_title">Редактировать плейлист</string>
    <string name="playlist_edit_button">Сохранить</string>
</resources>