<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/media_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".presentation.activity.MediaPlayerActivity">

    <LinearLayout
        android:id="@+id/media_player_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_button"
            style="@style/BackIconImageStyle"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_arrow_back_24" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ImageView
        android:id="@+id/track_cover"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="26dp"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/media_player_title"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/media_track_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/track_cover"
        tools:text="Track Name" />

    <TextView
        android:id="@+id/media_artist_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/media_track_name"
        tools:text="Artist Name" />

    <ImageView
        android:id="@+id/add_to_album_button"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:src="@drawable/ic_add_button_51"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="@id/play_button" />

    <ImageView
        android:id="@+id/play_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_play_button_100"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/media_artist_name" />

    <ImageView
        android:id="@+id/like_button"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:src="@drawable/ic_like_button_51"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintTop_toTopOf="@id/play_button" />

    <TextView
        android:id="@+id/current_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/play_button"
        app:layout_constraintStart_toStartOf="@id/play_button"
        app:layout_constraintTop_toBottomOf="@id/play_button"
        tools:text="00:55" />

    <LinearLayout
        android:id="@+id/duration_container"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/current_duration">

        <TextView
            style="@style/MediaTrackInfo"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:text="@string/duration" />

        <TextView
            android:id="@+id/duration_value"
            style="@style/MediaTrackInfoValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:lines="1"
            tools:text="3:45" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/album_container"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/duration_container">

        <TextView
            style="@style/MediaTrackInfo"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:text="@string/album" />

        <TextView
            android:id="@+id/album_value"
            style="@style/MediaTrackInfoValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:lines="1"
            tools:text="Название альбома" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/year_container"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/album_container">

        <TextView
            style="@style/MediaTrackInfo"
            android:layout_width="124dp"
            android:layout_height="15dp"
            android:text="@string/year" />

        <TextView
            android:id="@+id/year_value"
            style="@style/MediaTrackInfoValue"
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_weight="1"
            android:gravity="end"
            android:lines="1"
            tools:text="2023" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/genre_container"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/year_container">

        <TextView
            style="@style/MediaTrackInfo"
            android:layout_width="124dp"
            android:layout_height="15dp"
            android:text="@string/genre" />

        <TextView
            android:id="@+id/genre_value"
            style="@style/MediaTrackInfoValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:lines="1"
            tools:text="Pop" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/country_container"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/genre_container">

        <TextView
            style="@style/MediaTrackInfo"
            android:layout_width="124dp"
            android:layout_height="15dp"
            android:text="@string/country" />

        <TextView
            android:id="@+id/country_value"
            style="@style/MediaTrackInfoValue"
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_weight="1"
            android:gravity="end"
            android:lines="1"
            tools:text="USA" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>